# Sliding-Windows-Path-Planning-Pure-Pursuit

./: .gitignore  README.md
demo/: lane_demo_offline.py
docs/: acaebdb5-7314-4375-a8f7-9e290577ac0a.png:Zone.Identifier  bdb9ad15-d952-46a7-950d-415415b7bc87.png:Zone.Identifier
src/lane_follower/: CMakeLists.txt  package.xml
src/lane_follower/launch/: lane_follower.launch
src/lane_follower/scripts/: lane_detector.py  path_planner.py  pure_pursuit_ctrl.py
