<?xml version="1.0"?>
<package format="2">
  <name>lane_follower</name>
  <version>0.0.1</version>
  <description>Lane detection, path planning, and pure-pursuit control nodes for a small autonomous vehicle.</description>

  <maintainer email="ihw@example.com">ihw</maintainer>
  <license>MIT</license>

  <!-- 빌드 도구 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 빌드 의존성 -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- 실행 의존성 -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export/>
</package>
